Scroll overflow bug

--- a/sites/all/themes/sunrise/css/style.css
+++ b/sites/all/themes/sunrise/css/style.css
@@ -1744,6 +1744,7 @@ body {
   margin: 0;
   padding: 0;
   min-width: 860px;
+  overflow-x: scroll;
 }
 
 * {
